IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/3/13: Fixed 3dmod autocontrast for zoomed-down display of a subarea when
Subarea option is not  checked.

7/1/13: IMOD_4-6-24
7/1/13: Fixed bug that prevented Autofidseed from giving Imodfindbeads the
sigma for kernel filtering, and made Autofidseed tell Imodfindbeads about
prealignment transforms so it can avoid picking peaks at edge of image.

7/1/13: Fixed bug that hung beadtrack.

6/29/13: Made Batchruntomo able to run Archiveorig and Trimvol, accept CPU and
GPU lists with the new syntax that Processchunks takes, use a binned
thickness, and time out Processchunks if no PID appears in its output.

6/29/13: Made Ccderaser able to remove "extra-large" X-rays and artifacts
automatically, and made some other minor improvements to X-ray removal.

6/28/13: In eTomo - PEET, removed an incorrect validation that prevented a
dataset from being created in a directory containing a .prm file with a
different name.(Bug# 1553)

6/28/13: In the eTomo - PEET tables, keeping the following row highlighted
after a row is deleted.(Bug# 1689)

6/28/13: In eTomo fixed some issues with the template choosers and how they
work with the Reconstruction Setup dialog.(Bug# 1720)

6/24/13: Added option to Boxstartend to taper incomplete boxes near edge of
volume inside or outside of the image data boundary.

6/24/13: Based fill value when displaying incomplete or spread-out montage on
the image mean.

6/24/13: In eTomo - PEET, added a warning popup when a value in the .prm file
will be overridden.(Bug# 1486)

6/24/13: Made Sirtsetup turn GPU failure from warning to error.

6/24/13: Added 6-7-y-u-i-h-j hot keys as an alternative to the keypad in 3dmod
model view for rotating the model or clipping planes.

6/23/13: Added an option in 3dmod preferences to use up and down arrows just
like PageUp/PageDown.

6/23/13: Rotatevol has an option to rotate by the inverse of the specified
angles.
